# liquidqr-cppapp

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  liquidqr_1.0_amd64.deb  run_linux.sh  run_macos.sh  run_windows.bat
qml/: GlassContainer.qml  LiquidBackground.qml  Main.qml  StyledInput.qml  TitleBar.qml
src/: LiquidBackground.cpp  LiquidBackground.h  MainWindow.cpp  MainWindow.h  QRGenerator.cpp  QRGenerator.h  main.cpp
